--- a/src/scss/layout/_layout.scss
+++ b/src/scss/layout/_layout.scss
@@ -27,4 +27,4 @@
 @import "pages/blog/blog";
 @import "pages/blog/blog-card";
 
-@import "pages/item/showcase";
+@import "pages/item/showcase/main";
