--- a/src/scss/layout/pages/item/showcase/_showcase.scss
+++ b/src/scss/layout/pages/item/showcase/_showcase.scss
@@ -3,13 +3,23 @@
 }
 
 .showcase {
+  &__row {
+    &--secondary {
+      margin-top: 40px;
+      padding: 30px 0;
+
+
+      background-color: #fafafa;
+    }
+  }
+
   &__title {
     margin-bottom: 10px;
   }
 
   &__picture {
     width: 100%;
-    height: 358px;
+    height: 400px;
 
     overflow: hidden;
     border-radius: $border-radius--medium;
