--- a/src/scss/layout/pages/item/showcase/_showcase.scss
+++ b/src/scss/layout/pages/item/showcase/_showcase.scss
@@ -8,8 +8,11 @@
       margin-top: 40px;
       padding: 30px 0;
 
-
       background-color: #fafafa;
+
+      @include breakpoint($breakpoint-laptop--large) {
+        margin-top: 15px;
+      }
     }
   }
 
@@ -23,11 +26,19 @@
 
     overflow: hidden;
     border-radius: $border-radius--medium;
+
+    @include breakpoint($breakpoint-mobile--large) {
+      height: 180px;
+    }
   }
 
   &__description {
     height: 235px;
     overflow: auto;
+
+    @include breakpoint($breakpoint-mobile--large) {
+      height: 175px;
+    }
   }
 
   &__action {
@@ -35,5 +46,17 @@
     align-items: center;
 
     margin-top: 20px;
+
+    @include breakpoint($breakpoint-mobile--large) {
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .button {
+      @include breakpoint($breakpoint-mobile--large) {
+        width: 100%;
+        max-width: 320px;
+      }
+    }
   }
 }
