feat: верстка калькулятора, общие улучшения верстки

--- a/src/scss/components/table/_main.scss
+++ b/src/scss/components/table/_main.scss
@@ -3,4 +3,6 @@
 // и подключение дополнительных вариаций
 // -----------------------------------------------------------------------------
 
+$table-border: 1px solid #e0e0e0;
+
 @import 'table';
