--- a/src/scss/components/scrollbar/_scrollbar.scss
+++ b/src/scss/components/scrollbar/_scrollbar.scss
@@ -4,6 +4,11 @@
   &::-webkit-scrollbar {
     width: 8px;
     height: 8px;
+
+    @include breakpoint($breakpoint-mobile--large) {
+      width: 5px;
+      height: 5px;
+    }
   }
 
   &::-webkit-scrollbar-track {
