--- a/src/scss/components/table/_table.scss
+++ b/src/scss/components/table/_table.scss
@@ -28,6 +28,10 @@
   td,
   th {
     padding: 8px 12px;
+
+    @include breakpoint($breakpoint-mobile--large) {
+      padding: 4px 8px;
+    }
   }
 }
 
@@ -39,4 +43,8 @@ tr,
 th,
 td {
   border: $table-border;
+
+  @include breakpoint($breakpoint-mobile--large) {
+    font-size: $text-size--small;
+  }
 }
