--- a/src/scss/layout/pages/main/_hero.scss
+++ b/src/scss/layout/pages/main/_hero.scss
@@ -1,7 +1,7 @@
 #home {
   #hero {
     position: relative;
-    padding: 30px;
+    padding-bottom: 30px;
 
     background-image: url("../img/page/main/hero/background.svg");
     background-size: 100%;
@@ -19,6 +19,8 @@
       left: 0;
       width: 100%;
       height: 100px;
+
+      pointer-events: none;
 
       background: linear-gradient(
         0deg,
@@ -72,6 +74,22 @@
     }
 
     &__image {
+    }
+
+    &__action {
+      display: flex;
+      align-items: center;
+
+      margin-top: 25px;
+
+      @include breakpoint($breakpoint-mobile--large) {
+        flex-direction: column;
+
+        .button {
+          width: 100%;
+          max-width: 320px;
+        }
+      }
     }
   }
 }
