--- a/src/scss/layout/pages/mosquito/_material.scss
+++ b/src/scss/layout/pages/mosquito/_material.scss
@@ -11,6 +11,7 @@
   &__item {
     display: flex;
     flex-direction: column;
+    width: 100%;
 
     padding: 15px;
     border-radius: $border-radius--large;
@@ -19,7 +20,7 @@
 
   &__picture {
     width: 100%;
-    max-width: 140px;
+    max-width: 120px;
 
     margin-right: 15px;
 
@@ -64,7 +65,7 @@
   }
 
   &__name {
-    margin-top: 10px;
+    margin-top: 5px;
 
     font-size: $heading-size--small - 3;
     font-weight: $weight-Medium;
@@ -94,13 +95,15 @@
     color: $text-black;
   }
 
+  &__content {
+    margin: 10px 0;
+  }
+
   &__description {
     display: -webkit-box;
     -webkit-line-clamp: 4;
     -webkit-box-orient: vertical;
     overflow: hidden;
-
-    margin-top: 15px;
 
     @include breakpoint($breakpoint-mobile--large) {
       margin-top: 5px;
@@ -111,9 +114,11 @@
 
   &__action {
     margin-top: auto;
+    text-align: right;
   }
 
   &__link {
+    display: inline-flex;
     font-size: $text-size--small;
     color: $text-gray;
   }
