--- a/src/scss/layout/_layout.scss
+++ b/src/scss/layout/_layout.scss
@@ -27,4 +27,5 @@
 @import "pages/blog/blog";
 @import "pages/blog/blog-card";
 
+@import "pages/item/compatibility";
 @import "pages/item/showcase/main";
