--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -22,6 +22,7 @@
 @import "vendors/bootstrap-utilities";
 @import "vendors/choices";
 @import "vendors/handorgel";
+@import "vendors/aos";
 
 // 4. Импорт надстроек библиотек
 @import "vendors-extended/vendor-extend";
