feat: доработка верстки, стилей

--- a/src/scss/layout/blocks/section/calculator/_calculator.scss
+++ b/src/scss/layout/blocks/section/calculator/_calculator.scss
@@ -8,6 +8,12 @@
   }
 }
 
+#calculator-small {
+  .calculator__body {
+    border-bottom: none;
+  }
+}
+
 .calculator {
   padding: 45px;
   border-radius: $border-radius--large;
