--- a/src/scss/components/table/_table.scss
+++ b/src/scss/components/table/_table.scss
@@ -20,6 +20,20 @@
     }
   }
 
+  &__tooltip {
+
+  }
+
+  &__help {
+    display: inline-block;
+    vertical-align: middle;
+
+    margin-bottom: 3px;
+
+    width: 18px;
+    cursor: help;
+  }
+
   th {
     text-align: left;
     font-weight: $weight-Bold;
