--- a/src/scss/components/form/_map.scss
+++ b/src/scss/components/form/_map.scss
@@ -4,4 +4,10 @@
       display: none;
     }
   }
+
+  .form__button {
+    @include breakpoint($breakpoint-mobile--large) {
+      width: 100%;
+    }
+  }
 }
