--- a/src/scss/components/slider/_slider.scss
+++ b/src/scss/components/slider/_slider.scss
@@ -13,6 +13,11 @@
   }
 
   &--mobile {
+    @include breakpoint($breakpoint-mobile--large) {
+      flex-wrap: nowrap;
+      overflow: initial;
+    }
+
     .swiper-wrapper {
       @include breakpoint($breakpoint-mobile--large) {
         flex-wrap: nowrap;
