--- a/src/scss/layout/blocks/blocks/card/_card.scss
+++ b/src/scss/layout/blocks/blocks/card/_card.scss
@@ -45,6 +45,10 @@
   &__title {
     font-weight: $weight-Medium;
     font-size: $text-size--large;
+
+    @include breakpoint($breakpoint-mobile--large) {
+      font-size: $text-size--medium;
+    }
   }
 
   &__link {
