--- a/src/scss/layout/pages/blog/_blog-card.scss
+++ b/src/scss/layout/pages/blog/_blog-card.scss
@@ -1,5 +1,6 @@
 .blog-card {
   display: flex;
+  flex-direction: column;
   background-color: $section-primary;
 
   border-radius: $border-radius--medium;
@@ -10,26 +11,9 @@
     flex-direction: column;
   }
 
-  &:not(:last-child) {
-    margin-bottom: 40px;
-  }
-
-  &--main {
-    position: sticky;
-    top: 130px;
-
-    flex-direction: column;
-
-    .blog-card__picture {
-      width: 100%;
-      height: 198px;
-    }
-  }
-
   &__picture {
     flex-shrink: 0;
-
-    width: 240px;
+    width: 100%;
 
     @include breakpoint($breakpoint-mobile--large) {
       width: 100%;
@@ -44,29 +28,28 @@
   &__title {
     margin-bottom: 15px;
 
-    font-size: $heading-size--small - 3;
+    font-size: $text-size--large;
     font-weight: $weight-Medium;
 
-    @include breakpoint($breakpoint-mobile--large) {
-      margin-bottom: 10px;
-      font-size: $text-size--large;
-    }
+    line-height: 140%;
   }
 
   &__description {
     display: -webkit-box;
-    -webkit-line-clamp: 4;
+    -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
     overflow: hidden;
 
-    @include breakpoint($breakpoint-mobile--large) {
-      font-size: $text-size--small;
-      line-height: 180%;
-    }
+    font-size: $text-size--small;
+    line-height: 180%;
   }
 
   &__action {
     margin-top: 20px;
+  }
+
+  &__button {
+    width: 100%;
   }
 
   &__wrapper {
