--- a/src/scss/layout/pages/main/_feedback.scss
+++ b/src/scss/layout/pages/main/_feedback.scss
@@ -46,7 +46,7 @@
   &__text,
   &__footer {
     @include breakpoint($breakpoint-laptop--medium) {
-      font-size: $text-size--small - 2;
+      font-size: $text-size--small;
       line-height: 180%;
     }
   }
