--- a/src/scss/components/slider/_illumination.scss
+++ b/src/scss/components/slider/_illumination.scss
@@ -1,10 +1,7 @@
-.slider-constuction {
+.slider-illumination {
   .swiper-slide {
-    width: 50%;
-    height: initial;
-
     @include breakpoint($breakpoint-mobile--large) {
-      width: 80%;
+      width: 36%;
     }
   }
 }
