--- a/src/scss/layout/_layout.scss
+++ b/src/scss/layout/_layout.scss
@@ -24,6 +24,8 @@
 @import "pages/mosquito/material";
 @import "pages/mosquito/usage";
 
+@import "pages/curtains/catalog";
+
 @import "pages/blog/blog";
 @import "pages/blog/blog-card";
 
