fix: исправлено наложение классов

--- a/src/scss/layout/_layout.scss
+++ b/src/scss/layout/_layout.scss
@@ -18,6 +18,7 @@
 @import "pages/main/order";
 @import "pages/main/useful";
 @import "pages/main/feedback";
+@import "pages/main/production";
 
 @import "pages/mosquito/hero";
 @import "pages/mosquito/constuction";
