--- a/src/scss/layout/pages/main/_production.scss
+++ b/src/scss/layout/pages/main/_production.scss
@@ -1,8 +1,8 @@
 #home {
-  #catalog {
+  #production {
   }
 
-  .catalog {
+  .production {
     &__item {
       position: relative;
       overflow: hidden;
