--- a/src/scss/components/scrollbar/_scrollbar.scss
+++ b/src/scss/components/scrollbar/_scrollbar.scss
@@ -17,13 +17,12 @@
 
   &::-webkit-scrollbar-thumb {
     background: $scrollbar__contoller;
-    border-radius: $border-radius--large;
+    border-radius: $border-radius--medium;
   }
 
   &--wide {
     &::-webkit-scrollbar {
-      width: 16px;
-      height: 12px;
+      width: 14px;
     }
   }
 }
