--- a/src/scss/components/scrollbar/_scrollbar.scss
+++ b/src/scss/components/scrollbar/_scrollbar.scss
@@ -17,7 +17,7 @@
 
   &::-webkit-scrollbar-thumb {
     background: $scrollbar__contoller;
-    border-radius: $border-radius--medium;
+    border-radius: 3px;
   }
 
   &--wide {
