--- a/src/scss/layout/pages/portfolio/_portfolio.scss
+++ b/src/scss/layout/pages/portfolio/_portfolio.scss
@@ -1,5 +1,5 @@
 #portfolio {
-  padding-top: 30px;
+  padding-top: 60px;
 }
 
 .portfolio {
@@ -19,6 +19,10 @@
         }
       }
     }
+  }
+
+  &__content {
+    display: none;
   }
 
   &__body {
