feat: небольшие доработки по верстке

--- a/src/scss/layout/pages/article/_article.scss
+++ b/src/scss/layout/pages/article/_article.scss
@@ -28,6 +28,16 @@
     object-fit: cover;
   }
 
+  p,
+  ul,
+  ol {
+    font-size: 16px;
+
+    @include breakpoint($breakpoint-mobile--large) {
+      font-size: 14px;
+    }
+  }
+
   ul {
     list-style-type: disc;
   }
