--- a/src/scss/components/button/_button.scss
+++ b/src/scss/components/button/_button.scss
@@ -17,6 +17,8 @@
   font-size: $text-size--large;
   text-align: center;
 
+  line-height: 100%;
+
   @include breakpoint($breakpoint-laptop--large) {
     font-size: $text-size--medium;
   }
