--- a/src/scss/components/modal/_portfolio.scss
+++ b/src/scss/components/modal/_portfolio.scss
@@ -42,4 +42,25 @@
       }
     }
   }
+
+  .modal__picture {
+    width: 100%;
+    height: 200px;
+    overflow: hidden;
+
+    border-radius: $border-radius--large;
+
+    transition: $transition__image;
+
+    @include breakpoint($breakpoint-tablet) {
+      height: 80px;
+      border-radius: $border-radius--medium;
+    }
+
+    @media (hover: hover) {
+      &:hover {
+        opacity: 0.6;
+      }
+    }
+  }
 }
