--- a/src/scss/layout/pages/blog/_blog-card.scss
+++ b/src/scss/layout/pages/blog/_blog-card.scss
@@ -14,6 +14,11 @@
   &__picture {
     flex-shrink: 0;
     width: 100%;
+    height: 190px;
+
+    @include breakpoint($breakpoint-laptop--large) {
+      height: 165px;
+    }
 
     @include breakpoint($breakpoint-mobile--large) {
       width: 100%;
