feat: большая доработка верстки

--- a/src/scss/components/_components.scss
+++ b/src/scss/components/_components.scss
@@ -5,6 +5,7 @@
 @import "animation/main";
 @import "button/main";
 @import "dropdown/main";
+@import "editor/main";
 @import "effect/main";
 @import "form/main";
 @import "input/main";
