--- a/src/scss/components/modal/_main.scss
+++ b/src/scss/components/modal/_main.scss
@@ -7,5 +7,5 @@ $modal-bg__primary: $section-primary;
 
 @import 'modal';
 @import 'callback';
-@import 'accept';
+@import 'success';
 @import 'portfolio';
