--- a/src/scss/components/modal/_success.scss
+++ b/src/scss/components/modal/_success.scss
@@ -1,4 +1,4 @@
-.modal-accept {
+.modal-success {
   .modal__overlay {
     @include breakpoint($breakpoint-laptop--large) {
       align-items: center;
