--- a/src/scss/components/modal/_modal.scss
+++ b/src/scss/components/modal/_modal.scss
@@ -34,7 +34,7 @@
 
       overflow: auto;
 
-      padding: 30px 20px;
+      padding: 15px 20px 30px;
 
       border-bottom-left-radius: 0;
       border-bottom-right-radius: 0;
@@ -42,7 +42,7 @@
   }
 
   &__header {
-    margin-bottom: 15px;
+    margin-bottom: 25px;
     padding-bottom: 15px;
 
     border-bottom: 1px solid #f3f3f3;
@@ -88,6 +88,13 @@
     cursor: pointer;
 
     transition: opacity 0.15s ease;
+
+    @include breakpoint($breakpoint-mobile--large) {
+      top: 20px;
+      right: 20px;
+
+      transform: scale(0.8);
+    }
 
     @media (hover: hover) {
       &:hover path {
