--- a/src/scss/components/modal/_portfolio.scss
+++ b/src/scss/components/modal/_portfolio.scss
@@ -12,7 +12,15 @@
       border-bottom: $border-primary;
 
       margin-bottom: 20px;
-      padding-bottom: 20px;
+    }
+  }
+
+  .modal__row {
+    &:not(:last-child) {
+      border-bottom: $border-primary;
+
+      margin-bottom: 15px;
+      padding-bottom: 15px;
     }
   }
 
@@ -43,18 +51,21 @@
     }
   }
 
+  .modal__slider {
+    overflow: hidden;
+  }
+
   .modal__picture {
     width: 100%;
-    height: 200px;
+    height: 173px;
     overflow: hidden;
 
-    border-radius: $border-radius--large;
+    border-radius: $border-radius--medium;
 
     transition: $transition__image;
 
     @include breakpoint($breakpoint-tablet) {
-      height: 80px;
-      border-radius: $border-radius--medium;
+      height: 95px;
     }
 
     @media (hover: hover) {
@@ -62,5 +73,13 @@
         opacity: 0.6;
       }
     }
+  }
+
+  .modal__action {
+    margin-top: 20px;
+  }
+
+  .modal__action .button {
+    width: 100%;
   }
 }
