--- a/src/scss/layout/pages/article/_article.scss
+++ b/src/scss/layout/pages/article/_article.scss
@@ -1,63 +1,25 @@
 #article {
+  @include breakpoint($breakpoint-mobile--large) {
+    padding-top: 30px;
+  }
+
   padding-top: 60px;
 }
 
 .article {
+  max-width: 900px;
+  margin: 0 auto;
+
   &__header {
     display: inline-flex;
     flex-direction: column;
     align-items: flex-start;
-  }
 
-  &__body {
-    & > * {
-      &:not(:last-child) {
-        // margin-bottom: 20px;
-      }
-    }
+    margin-bottom: 10px;
   }
 
   img {
     max-width: 100%;
-    min-height: 250px;
-    max-height: 500px;
-
     border-radius: $border-radius--large;
-    margin: 0 auto;
-
-    object-fit: cover;
-  }
-
-  p,
-  ul,
-  ol {
-    font-size: 16px;
-
-    @include breakpoint($breakpoint-mobile--large) {
-      font-size: 14px;
-    }
-  }
-
-  ul {
-    list-style-type: disc;
-  }
-
-  ul,
-  ol {
-    padding-left: 20px;
-  }
-
-  h2 {
-    margin-bottom: 20px !important;
-  }
-
-  h3 {
-    margin-bottom: 10px !important;
-  }
-
-  h2,
-  h3,
-  h4 {
-    font-weight: $weight-Medium;
   }
 }
