--- a/src/scss/layout/pages/portfolio/_portfolio.scss
+++ b/src/scss/layout/pages/portfolio/_portfolio.scss
@@ -1,4 +1,4 @@
-#portfolio {
+main#portfolio {
   padding-top: 60px;
 }
 
@@ -36,8 +36,12 @@
   }
 
   &__picture {
+    @include breakpoint($breakpoint-mobile--large) {
+      height: 220px;
+    }
+
     width: 100%;
-    height: 220px;
+    height: 280px;
 
     overflow: hidden;
 
