--- a/src/scss/components/effect/_fade.scss
+++ b/src/scss/components/effect/_fade.scss
@@ -1,4 +1,4 @@
-$gradient: linear-gradient(0deg, #ffffff 20%, rgba(255, 255, 255, 0) 100%);
+$gradient: linear-gradient(0deg, #ffffff 20%, rgba(#ffffff, 0) 100%);
 $height: 100px;
 
 .effect-fade {
@@ -13,7 +13,7 @@ $height: 100px;
   }
 
   &--short::after {
-    height: $height / 2;
+    height: calc(#{$height} / 2);
   }
 
   &--bottom::after {
